--- a/launch/controller.yaml
+++ b/launch/controller.yaml
@@ -5,51 +5,51 @@ ayspot_a0_controller:
     publish_rate: 50
 
   # Position Controllers --------------------------------------
-  旋转4_position_controller:
+  rotate1_position_controller:
     type: effort_controllers/JointPositionController
-    joint: 旋转4
+    joint: rotate1
     pid: {p: 100.0, i: 0.01, d: 10.0}
-  旋转5_position_controller:
+  rotate2_position_controller:
     type: effort_controllers/JointPositionController
-    joint: 旋转5
+    joint: rotate2
     pid: {p: 100.0, i: 0.01, d: 10.0}
-  旋转6_position_controller:
+  rotate4_position_controller:
     type: effort_controllers/JointPositionController
-    joint: 旋转6
+    joint: rotate4
     pid: {p: 100.0, i: 0.01, d: 10.0}
-  旋转7_position_controller:
+  rotate5_position_controller:
     type: effort_controllers/JointPositionController
-    joint: 旋转7
+    joint: rotate5
     pid: {p: 100.0, i: 0.01, d: 10.0}
-  旋转8_position_controller:
+  rotate7_position_controller:
     type: effort_controllers/JointPositionController
-    joint: 旋转8
+    joint: rotate7
     pid: {p: 100.0, i: 0.01, d: 10.0}
-  旋转9_position_controller:
+  rotate8_position_controller:
     type: effort_controllers/JointPositionController
-    joint: 旋转9
+    joint: rotate8
     pid: {p: 100.0, i: 0.01, d: 10.0}
-  旋转10_position_controller:
+  rotate10_position_controller:
     type: effort_controllers/JointPositionController
-    joint: 旋转10
+    joint: rotate10
     pid: {p: 100.0, i: 0.01, d: 10.0}
-  旋转11_position_controller:
+  rotate11_position_controller:
     type: effort_controllers/JointPositionController
-    joint: 旋转11
+    joint: rotate11
     pid: {p: 100.0, i: 0.01, d: 10.0}
-  旋转12_position_controller:
+  rotate3_position_controller:
     type: effort_controllers/JointPositionController
-    joint: 旋转12
+    joint: rotate3
     pid: {p: 100.0, i: 0.01, d: 10.0}
-  旋转13_position_controller:
+  rotate6_position_controller:
     type: effort_controllers/JointPositionController
-    joint: 旋转13
+    joint: rotate6
     pid: {p: 100.0, i: 0.01, d: 10.0}
-  旋转14_position_controller:
+  rotate9_position_controller:
     type: effort_controllers/JointPositionController
-    joint: 旋转14
+    joint: rotate9
     pid: {p: 100.0, i: 0.01, d: 10.0}
-  旋转15_position_controller:
+  rotate12_position_controller:
     type: effort_controllers/JointPositionController
-    joint: 旋转15
+    joint: rotate12
     pid: {p: 100.0, i: 0.01, d: 10.0}
